--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-  <span>Rodapé - Informações de Contato</span>
+<mat-toolbar color="primary" class="mat-toolbar-center">
+  <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
 </mat-toolbar>
