feat: add copyright

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar color="primary" class="mat-toolbar-center">
-  <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
+  <div class="content">
+    <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
+    <span>© 2023 Sou doador. Todos direitos reservados.</span>
+  </div>
 </mat-toolbar>
