--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,9 +2,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 23.75rem;
+}
+
+.content {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-  max-width: 100%;
-  margin-right: 1rem;
+  width: 11.25rem;
+  height: 1.9329rem;
+  margin-top: 5.5rem;
+  margin-bottom: 2rem;
 }
