feat: create menu component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,5 +2,6 @@
   <div class="content">
     <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
     <span>© 2023 Sou doador. Todos direitos reservados.</span>
+    <app-menu></app-menu>
   </div>
 </mat-toolbar>
