feat: create contact and about component

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <p>menu works!</p>
 
 <nav class="menu">
-  <a routerLink="/pagina1">Página 1</a>
-  <a routerLink="/pagina2">Página 2</a>
+  <a routerLink="/contato">Contato</a>
+  <a routerLink="/sobre">Sobre</a>
 </nav>
