style: style menu

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="mat-toolbar-center">
   <div class="content">
     <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
-    <span>© 2023 Sou doador. Todos direitos reservados.</span>
     <app-menu></app-menu>
+    <span class="copyright">© 2023 Sou doador. Todos direitos reservados.</span>
   </div>
 </mat-toolbar>
