--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,4 @@
-<p>menu works!</p>
-
-<nav class="menu">
+<nav class="menu" color="primary">
   <a routerLink="/contato">Contato</a>
   <a routerLink="/sobre">Sobre</a>
 </nav>
