--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-  <span>Sou Doador</span>
+<mat-toolbar color="primary" class="header">
+  <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
 </mat-toolbar>
