feat: add app-menu and buttons in header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar color="primary" class="header">
   <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
+  <app-menu [menuItems]="menuItems"></app-menu>
+  <button mat-button [routerLink]="['/entrar']">Entrar</button>
+  <button mat-flat-button color="accent" [routerLink]="['/cadastro']">
+    Faça parte
+  </button>
 </mat-toolbar>
