--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,7 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 5rem;
 }
 
@@ -6,4 +9,15 @@
   width: 7.625rem;
   height: 1.3125rem;
   margin-left: 4.3125rem;
+}
+
+.menu-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.buttons-container {
+  display: flex;
+  gap: 1rem;
 }
