--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<div class="about">
+  <h1>{{ title }}</h1>
+  <h2>{{ subtitle }}</h2>
+  <p class="description" [innerHTML]="description"></p>
+</div>
