--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,5 +8,5 @@ body {
   margin: 0 auto;
   max-width: 80rem;
   background-color: #2a363b;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Poppins", Roboto, "Helvetica Neue", sans-serif;
 }
