--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about">
-  <h1>{{ title }}</h1>
-  <h2>{{ subtitle }}</h2>
+  <h1 class="title">{{ title }}</h1>
+  <h2 class="subtitle">{{ subtitle }}</h2>
   <p class="description" [innerHTML]="description"></p>
 </div>
