--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -5,6 +5,14 @@
   margin-right: 30rem;
 }
 
+.title {
+  margin-bottom: 1rem;
+}
+
+.subtitle {
+  margin-bottom: 2rem;
+}
+
 .description {
   text-align: justify;
 }
