--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -22,3 +22,21 @@
   display: flex;
   gap: 1rem;
 }
+
+.buttonLogin {
+  color: var(--gray-300, #bbc3cf) !important;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
+.buttonRegister {
+  color: var(--primary-050, #f0fdf4) !important;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
