feat: create home title component

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-toolbar-center">
   <div class="content">
-    <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
+    <img src="assets/logo.svg" alt="Sou Doador" class="logo" />
     <app-menu [menuItems]="menuItems"></app-menu>
     <span class="copyright">© 2023 Sou doador. Todos direitos reservados.</span>
   </div>
