--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="header">
   <a [routerLink]="['/']">
-    <img src="assets/logo.svg" alt="Descrição da imagem" class="logo" />
+    <img src="assets/logo.svg" alt="Sou Doador" class="logo" />
   </a>
   <app-menu [menuItems]="menuItems" class="menu-container"></app-menu>
   <div class="buttons-container">
