feat: add callToAction

--- a/src/app/components/home-title/home-title.component.html
+++ b/src/app/components/home-title/home-title.component.html
@@ -1,3 +1,4 @@
 <div class="homeTitle">
   <img src="assets/logo.svg" alt="Sou Doador" class="logo" />
+  <div class="callToAction">Faça parte de algo maior</div>
 </div>
