feat: create page title component

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,2 @@
-<div class="about">
-  <h1 class="title">{{ title }}</h1>
-  <h2 class="subtitle">{{ subtitle }}</h2>
-  <p class="description" [innerHTML]="description"></p>
-</div>
+<app-page-title [title]="title" [subtitle]="subtitle"></app-page-title>
+<p class="description" [innerHTML]="description"></p>
