feat(page-title): add page title in pages

--- a/src/app/pages/campaigns/campaigns.component.html
+++ b/src/app/pages/campaigns/campaigns.component.html
@@ -1,1 +1,4 @@
-<p>campaigns works!</p>
+<app-page-title
+  title="Campanhas"
+  subtitle="Encontre ações que estão acontecendo perto de você. "
+></app-page-title>
