--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,4 @@
-<p>contact works!</p>
+<app-page-title
+  title="Contato"
+  subtitle="Entre em contato conosco pelo e-mail contato@soudoador.com"
+></app-page-title>
