--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,1 +1,4 @@
-<p>registration works!</p>
+<app-page-title
+  title="Faça parte"
+  subtitle="Encontre campanhas de doação de sangue que estão acontecendo perto de você!"
+></app-page-title>
