--- a/src/app/pages/where-donate/where-donate.component.html
+++ b/src/app/pages/where-donate/where-donate.component.html
@@ -1,1 +1,4 @@
-<p>where-donate works!</p>
+<app-page-title
+  title="Onde doar"
+  subtitle="Encontre hemocentros perto de você."
+></app-page-title>
