--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -1,1 +1,4 @@
-<p>faq works!</p>
+<app-page-title
+  title="Perguntas Frequentes"
+  subtitle="Tire suas dúvidas sobre a doaçã de sangue"
+></app-page-title>
