--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -1,4 +1,5 @@
 <div class="page">
+  <mat-chip color="accent" *ngIf="info">{{ info.toUpperCase() }}</mat-chip>
   <h1 class="title">{{ title }}</h1>
   <h2 class="subtitle">{{ subtitle }}</h2>
 </div>
