--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,6 @@
-<app-page-title [title]="title" [subtitle]="subtitle"></app-page-title>
+<app-page-title
+  [info]="info"
+  [title]="title"
+  [subtitle]="subtitle"
+></app-page-title>
 <p class="description" [innerHTML]="description"></p>
