--- a/src/app/components/page-title/page-title.component.scss
+++ b/src/app/components/page-title/page-title.component.scss
@@ -4,6 +4,10 @@
   margin-right: 30rem;
 }
 
+.info {
+  background-color: var(--accent-color) !important;
+}
+
 .title {
   margin-top: 1rem;
   margin-bottom: 1rem;
