feat: add info in pages

--- a/src/app/pages/campaigns/campaigns.component.html
+++ b/src/app/pages/campaigns/campaigns.component.html
@@ -1,4 +1,5 @@
 <app-page-title
+  info="Campanhas Ativas"
   title="Campanhas"
   subtitle="Encontre ações que estão acontecendo perto de você. "
 ></app-page-title>
