--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,5 @@
 <app-page-title
+  info="Entre em contato"
   title="Contato"
   subtitle="Entre em contato conosco pelo e-mail contato@soudoador.com"
 ></app-page-title>
