--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -1,4 +1,5 @@
 <app-page-title
+  info="FAQ"
   title="Perguntas Frequentes"
   subtitle="Tire suas dúvidas sobre a doaçã de sangue"
 ></app-page-title>
