--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,4 +1,5 @@
 <app-page-title
+  info="Cadastro"
   title="Faça parte"
   subtitle="Encontre campanhas de doação de sangue que estão acontecendo perto de você!"
 ></app-page-title>
