--- a/src/app/pages/where-donate/where-donate.component.html
+++ b/src/app/pages/where-donate/where-donate.component.html
@@ -1,4 +1,5 @@
 <app-page-title
+  info="Lugares para doar sangue"
   title="Onde doar"
   subtitle="Encontre hemocentros perto de você."
 ></app-page-title>
