--- a/src/app/components/two-column-layout/two-column-layout.component.scss
+++ b/src/app/components/two-column-layout/two-column-layout.component.scss
@@ -24,7 +24,7 @@
   margin-top: 2rem;
 
   font-family: Poppins;
-  font-size: 60px;
+  font-size: 3.75rem;
   font-style: normal;
   font-weight: 700;
   line-height: 72px;
