--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -3,3 +3,10 @@
   title="Faça parte"
   subtitle="Encontre campanhas de doação de sangue que estão acontecendo perto de você!"
 ></app-page-title>
+
+<app-two-column-layout>
+  <div column2>
+    <h2>Segunda Coluna</h2>
+    <p>Conteúdo da segunda coluna aqui.</p>
+  </div>
+</app-two-column-layout>
