feat(login): add login inputs

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,14 @@
 
 <app-two-column-layout>
   <div column2>
-    <h2>Segunda Coluna</h2>
-    <p>Conteúdo da segunda coluna aqui.</p>
+    <form class="login-form" fxLayout="column" fxLayoutAlign="center center">
+      <mat-form-field>
+        <input matInput placeholder="Email" required />
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" placeholder="Senha" required />
+      </mat-form-field>
+      <button mat-flat-button color="accent" class="login">Entrar</button>
+    </form>
   </div>
 </app-two-column-layout>
