--- a/src/app/pages/where-donate/where-donate.component.html
+++ b/src/app/pages/where-donate/where-donate.component.html
@@ -3,3 +3,4 @@
   title="Onde doar"
   subtitle="Encontre hemocentros perto de você."
 ></app-page-title>
+<app-instituion-list></app-instituion-list>
