feat(wheredonate): add instituion contat data

--- a/src/app/components/instituion-list/instituion-list.component.html
+++ b/src/app/components/instituion-list/instituion-list.component.html
@@ -11,6 +11,18 @@
     </div>
     <div class="column">
       <h2>{{ institution.name }}</h2>
+      <div class="row-container">
+        <img src="/assets/email.svg" alt="Email" class="data-image" />
+        <h3>Email: {{ institution.email }}</h3>
+      </div>
+      <div class="row-container">
+        <img src="/assets/phone.svg" alt="Telefone" class="data-image" />
+        <h3>Telefone: {{ institution.phone }}</h3>
+      </div>
+      <div class="row-container">
+        <img src="/assets/address.svg" alt="Endereço" class="data-image" />
+        <h3>Endereço: {{ institution.address }}</h3>
+      </div>
     </div>
   </div>
 </div>
