--- a/src/app/components/instituion-list/instituion-list.component.scss
+++ b/src/app/components/instituion-list/instituion-list.component.scss
@@ -25,6 +25,15 @@
   width: 27rem;
 }
 
+.row-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.data-image {
+  margin-right: 1rem;
+}
+
 h2 {
   color: var(--gray-900, #2a3342);
 
@@ -34,4 +43,13 @@ h2 {
   font-weight: 700;
   line-height: 44px;
   letter-spacing: -0.72px;
+}
+
+h3 {
+  color: var(--gray-900, #2a3342);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32.702px;
 }
