--- a/src/app/pages/campaigns/campaigns.component.html
+++ b/src/app/pages/campaigns/campaigns.component.html
@@ -1,5 +1,6 @@
 <app-page-title
-  info="Campanhas Ativas"
+  info="Campanhas Ativas "
   title="Campanhas"
   subtitle="Encontre ações que estão acontecendo perto de você. "
 ></app-page-title>
+<app-campaign-list></app-campaign-list>
