feat(campaign): add campaign details

--- a/src/app/components/campaign-list/campaign-list.component.html
+++ b/src/app/components/campaign-list/campaign-list.component.html
@@ -9,6 +9,12 @@
         />
       </div>
     </div>
-    <div class="column"></div>
+    <div class="column">
+      <h2>{{ campaign.name }}</h2>
+      <p>{{ campaign.description }}</p>
+      <button mat-flat-button color="accent" class="buttonReadMore">
+        Ler mais
+      </button>
+    </div>
   </div>
 </div>
