--- a/src/app/components/campaign-list/campaign-list.component.scss
+++ b/src/app/components/campaign-list/campaign-list.component.scss
@@ -3,7 +3,7 @@
   padding: 7rem 5.5rem;
 }
 
-.instituion {
+.campaign {
   display: flex;
   margin-bottom: 8rem;
 }
@@ -23,4 +23,37 @@
 .centered-image {
   max-width: 100%;
   width: 27rem;
+}
+
+h2 {
+  color: var(--gray-900, #2a3342);
+
+  /* display-lg/Bold */
+  font-family: Poppins;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: -0.96px;
+  margin-bottom: 2rem;
+}
+
+p {
+  color: var(--gray-500, #556987);
+
+  /* text-xl/Medium */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  margin-bottom: 3.5rem;
+}
+
+.buttonReadMore {
+  color: var(--primary-050, #f0fdf4) !important;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
 }
