fix(institution): fix institution typo

--- a/src/app/components/home-institution/home-institution.component.html
+++ b/src/app/components/home-institution/home-institution.component.html
@@ -1,5 +1,5 @@
-<div class="homeInstituion">
-  <p class="instituionText">Institutos que confiam no nosso trabalho</p>
+<div class="homeInstitution">
+  <p class="institutionText">Institutos que confiam no nosso trabalho</p>
   <div class="card-container">
     <mat-card *ngFor="let institution of institutions" class="card">
       <div class="card-image">
