--- a/src/app/components/institution-list/institution-list.component.html
+++ b/src/app/components/institution-list/institution-list.component.html
@@ -1,5 +1,5 @@
-<div class="instituion-list">
-  <div class="instituion" *ngFor="let institution of institutions">
+<div class="institution-list">
+  <div class="institution" *ngFor="let institution of institutions">
     <div class="column">
       <div class="image-container">
         <img
