--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <app-home-title></app-home-title>
 <app-home-message></app-home-message>
-<app-home-instituion></app-home-instituion>
+<app-home-institution></app-home-institution>
