--- a/src/app/components/home-institution/home-institution.component.scss
+++ b/src/app/components/home-institution/home-institution.component.scss
@@ -1,9 +1,9 @@
-.homeInstituion {
+.homeInstitution {
   background: var(--white-900, #fff);
   padding: 7rem 5.5rem;
 }
 
-.instituionText {
+.institutionText {
   text-align: center;
   margin-bottom: 1.5rem;
 }
