--- a/src/app/components/institution-list/institution-list.component.scss
+++ b/src/app/components/institution-list/institution-list.component.scss
@@ -1,9 +1,9 @@
-.instituion-list {
+.institution-list {
   background: var(--white-900, #fff);
   padding: 7rem 5.5rem;
 }
 
-.instituion {
+.institution {
   display: flex;
   margin-bottom: 8rem;
 }
