feat(faq): create FaqComponent

--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -3,3 +3,4 @@
   title="Perguntas Frequentes"
   subtitle="Tire suas dúvidas sobre a doaçã de sangue"
 ></app-page-title>
+<app-faq-list></app-faq-list>
