--- a/src/app/pages/registration/registration.component.scss
+++ b/src/app/pages/registration/registration.component.scss
@@ -30,3 +30,35 @@
   line-height: 72px;
   letter-spacing: -1.2px;
 }
+
+.registration-form {
+  width: 28.125rem;
+  margin-top: 6rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+mat-form-field input {
+  width: 100%;
+  height: 3.5rem;
+  font-size: 1.2rem;
+}
+
+.register {
+  color: var(--primary-050, #f0fdf4) !important;
+  width: 28.125rem;
+  height: 3.5rem;
+  padding: 16px 28px;
+
+  justify-content: center;
+  align-items: center;
+
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
