--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -25,7 +25,7 @@
           O email é obrigatório.
         </mat-error>
         <mat-error *ngIf="email?.hasError('email')">
-          Email inválido.
+          Email inválido!
         </mat-error>
       </mat-form-field>
       <mat-form-field>
