--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -9,6 +9,10 @@ mat-form-field {
   width: 100%;
 }
 
+mat-error {
+  color: var(--accent-color);
+}
+
 mat-form-field input {
   width: 100%;
   height: 3.5rem;
@@ -20,6 +24,7 @@ mat-form-field input {
   width: 28.125rem;
   height: 3.5rem;
   padding: 16px 28px;
+  margin-top: 1rem;
 
   justify-content: center;
   align-items: center;
