feat: create resetForm function

--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -60,7 +60,11 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Última doação de sangue" />
+        <input
+          matInput
+          placeholder="Última doação de sangue"
+          formControlName="lastDonation"
+        />
       </mat-form-field>
       <mat-form-field>
         <input
