--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -103,6 +103,9 @@
         <mat-error *ngIf="confirmPassword?.hasError('required')">
           A confirmação de senha é obrigatória.
         </mat-error>
+        <mat-error *ngIf="confirmPassword?.hasError('notMatching')">
+          As senhas não coincidem.
+        </mat-error>
       </mat-form-field>
       <button mat-flat-button color="accent" class="register" type="submit">
         Entrar
