fix: rename register button

--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -108,7 +108,7 @@
         </mat-error>
       </mat-form-field>
       <button mat-flat-button color="accent" class="register" type="submit">
-        Entrar
+        Cadastrar
       </button>
     </form>
   </div>
